--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@ layout: default
 ---
 
 <div class="row">
-  <div class="medium-7 columns">
+  <div class="medium-9">
+    <p>Piráti v letošních krajských volbách kandidují ve všech regionech s výjimkou Prahy, kde už Piráti v zastupitelstvu sedí, a volí se tam pouze do Senátu. V osmi krajích kandidujeme samostatně a v pěti krajích v koalici s dalšími subjekty. Kliknutím na mapku se dostanete na volební web Pirátů v příslušném regionu. Děkujeme za podporu!</p>
+  </div>
+</div>
+<div class="row">
+  <div class="large-7 columns hide-for-small-only">
       <div id="paper" class=""></div>
   </div>
-  <div id="region-description" class="medium-5 columns" style="margin-top: 40px;">
+  <div class="large-5 columns" style="margin-top: 40px;">
     <ul id="regions-list">
     </ul>
-  </div>
 </div>
