odkazy bez tady/zde

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ layout: default
   <div class="medium-12">
     <p>Piráti v letošních krajských volbách kandidují ve všech regionech s výjimkou Prahy, kde už Piráti v zastupitelstvu sedí, a volí se tam pouze do Senátu. V osmi krajích kandidujeme samostatně a v pěti krajích v koalici s dalšími subjekty. Kliknutím na mapku se dostanete na volební web Pirátů v příslušném regionu. Děkujeme za podporu!</p>
 
-    <p>Společnou část programu Pirátů pro krajské volby: <a href="https://www.pirati.cz/volby/2016/program">naleznete tady</a></p>
+    <p><a href="https://www.pirati.cz/volby/2016/program">Společná část programu Pirátů pro krajské volby</a></p>
     
-    <p>Pirátské lídry pro krajské volby souhrně představujeme <a href="https://www.pirati.cz/tiskove-zpravy/pirati_predstavuji_krajske_lidry">zde</a></p>
+    <p><a href="https://www.pirati.cz/tiskove-zpravy/pirati_predstavuji_krajske_lidry">Představení krajských lídrů</a></p>
   </div>
 </div>
 <div class="row">
