--- a/index.html
+++ b/index.html
@@ -3,19 +3,120 @@ layout: default
 ---
 
 <div class="row">
-  <div class="medium-12">
-    <p>Piráti v letošních krajských volbách kandidují ve všech regionech s výjimkou Prahy, kde už Piráti v zastupitelstvu sedí, a volí se tam pouze do Senátu. V osmi krajích kandidujeme samostatně a v pěti krajích v koalici s dalšími subjekty. Kliknutím na mapku se dostanete na volební web Pirátů v příslušném regionu. Děkujeme za podporu!</p>
-
-    <p><a href="https://www.pirati.cz/volby/2016/program">Společná část programu Pirátů pro krajské volby</a></p>
-    
-    <p><a href="https://www.pirati.cz/tiskove-zpravy/pirati_predstavuji_krajske_lidry">Představení krajských lídrů</a></p>
-  </div>
+  <img src="{{'banner_desktop.jpg' | prepend: 'assets/img/' | prepend: site.baseurl }}">
 </div>
-<div class="row">
+
+<div class="row" style="background-color: lightgray;">
   <div class="large-7 columns hide-for-small-only">
       <div id="paper" class=""></div>
   </div>
   <div class="large-5 columns" style="margin-top: 40px;">
-    <ul id="regions-list">
-    </ul>
+    <div style="background-color: white;">
+      <h3>Kraje</h3>
+      <div class="o-section-inner o-section-inner--leftBlock">
+      <section class="o-section o-content">
+        <article>
+        <div class="row">
+          <div class="columns small-6">
+            <ul id="regions-list">
+            </ul>
+          </div>
+          <div class="columns small-6">
+            <ul id="regions-list-2">
+            </ul>
+          </div>
+        </div>
+      </article>
+      </section>
+    </div>
+    </div>
+  </div>
+</div>
+
+<section class="o-section o-section--spaceBot">
+  <div class="row">
+    <div class="medium-12 columns">
+      <h2 class="o-section__heading">Piráti představují krajské lídry</h2>
+      <!-- https://www.pirati.cz/tiskove-zpravy/pirati_predstavuji_krajske_lidry -->
+      <p>Pirátská strana představuje lídry kandidátek pro krajské volby 2016, které letos proběhnou 7. a 8. října. Piráti kandidují ve všech krajích, ve většině republiky samostatně, v některých krajích spojili síly v rámci koalice se Stranou Zelených, Změnou či regionálními hnutími. Mezi kandidáty na post hejtmana se vyskytují například průkopník internetového podnikání v Česku Jiří Hlavenka nebo bývalý předseda Pirátů Lukáš Černohorský. Pro všechny představuje stěžejní téma otevřenost a transparence, které ve spoustě krajích v praxi stále doposud nefungují a vedou k vysoké zadluženosti krajů, druhé klíčové téma Pirátů pro krajské volby je modernizace státní správy. Společný program pro krajské volby 2016 jsme představili v červnu.</p>
+      <p style="font-weight: 550"><a>Hl. m. Praha</a> / <a>Středočeský kraj</a> / <a>Jihočeský kraj</a> /</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="medium-2 columns">
+      <img src="{{ 'michal-horak.jpg' | prepend: 'assets/img/candidates/' | prepend: site.baseurl }}" class="centered">
+    </div>
+    <div class="medium-10 columns">
+      <div class="row">
+        <div class="medium-5 columns">
+        <h3>Milan Horák (51)</h3>
+        systémový inženýr a databázový specialista
+        </div>
+        <div class="medium-5 columns">
+        <h4>Jihočeský kraj</h4>
+        samostatná kandidátka Pirátů
+        </div>
+        <div class="medium-2 columns">
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="medium-12 columns">
+        <p>Vystudoval automatizaci a elektronické počítače na Vojenské akademii v Brně a do roku 1992 pracoval jako IT odborník v armádě. Žije v&nbsp;Písku, kde pracuje jako databázový specialista. Ve volném čase aktivně působí v házenkářském oddílu píseckého Sokola jako trenér mládeže, sekretář oddílu a sportovní manažer interligového družstva žen. Kraj má být podle jeho názoru otevřený. Měl by podporovat podnikání, smysluplný a udržitelný rozvoj oblastí i aktivitu občanů. Za hlavní problémy považuje pokračující odliv lidí z malých obcí, pomalý rozvoj dopravní infrastruktury a nedostatek slušně placené práce bez nutnosti dojíždění.</p>
+        <p><a>Profil kandidáta ></a></p>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="o-section o-section--spaceBot">
+  <div class="row">
+    <div class="medium-12 columns">
+      <section class="o-section o-section--spaceBot">
+        <h2 class="o-section__heading">Piráti představují kandidáty do senátu</h2>
+        <!-- https://www.pirati.cz/tiskove-zpravy/pirati_predstavuji_kandidaty_do_senatu -->
+        <p>Vedle krajských voleb se v třetině volebních obvodů konají i volby senátní, jejichž první kolo proběhne 7. a 8. října, druhé kolo následující víkend 15. a 16. října. Do voleb jde s podporou Pirátů osm různých kandidátů napříč republikou. Lukáš Černohorský, bývalý předseda Pirátů, navíc podal kandidaturu s cílem zpochybnit věkovou hranici pro senátní volby. Mezi kandidáty s podporou Pirátů najdeme aktivistku zaměřenou na zapojování veřejnosti do rozhodování, vedoucího Českého horologického spolku, který propojuje svoji vášeň pro informatiku se zájmem o staré hodiny, nebo zakladatele sdružení Podnikáme bez korupce.</p>
+        <p style="font-weight: 550"><a>Hl. m. Praha</a> / <a>Středočeský kraj</a> / <a>Jihočeský kraj</a> /</p>
+      </section>
+    </div>
+  </div>
+  <div class="row">
+    <div class="medium-2 columns">
+      <img src="{{ 'jiri-demel.png' | prepend: 'assets/img/candidates/' | prepend: site.baseurl }}" class="centered">
+    </div>
+    <div class="medium-10 columns">
+      <div class="row">
+        <div class="medium-5 columns">
+        <h3>Jiří Demel (59)</h3>
+        podnikatel v oblasti informačních technologií
+        </div>
+        <div class="medium-5 columns">
+        <h4>Nový Jičín</h4>
+        Piráti
+        </div>
+        <div class="medium-2 columns">
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="medium-12 columns">
+        <p>Dlouholetý předseda pirátského krajského sdružení žije v Příboru. Brzy po vystudování začal podnikat v různých oblastech a následně zamířil do rychle se rozvíjejících informačních technologií. V Moravskoslezském kraji se věnuje aktivitám spojeným se záchranou zničené přírody. Se spolupráci s pirátským předsednictvem kraje sjednotil aktivity občanských sdružení vystupujících proti další devastaci krajiny těžbou uhlí. Toto úsilí přineslo podepsaní smlouvy České asociace proti těžbě uhlí. Jiří Demel podpořil i aktivity týkající se průmyslové zóny v&nbsp;Mošnově. Senát vnímá jako jediný orgán, který může v současnosti omezit vydávání nadbytečné a nekvalitní legislativy. Vymezuje se proti normám omezujícím naše svobody přijímané ve jménu falešného pocitu bezpečí.</p>
+        <p><a>Profil kandidáta ></a></p>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="row">
+  <div class="medium-12 columns">
+    <section class="o-section o-section--spaceBot">
+      <h2 class="o-section__heading">Společný program pro krajské volby 2016</h2>
+      <!-- https://www.pirati.cz/volby/2016/program -->
+      <p>Naším cílem je kraj nové generace, kde může každý člověk svůj život prožít svobodně a naplno. Klíčem k prosperitě naší společnosti je otevřenost, transparentnost, svoboda informací, kvalitní veřejné služby, použití nových technologií a zapojení občanů do rozhodování. Piráti nabízí alternativu kraje bez korupce, nesmyslných dotací, politických trafik a klientelismu. Chceme, aby krajské úřady nebyly pro aktivní občany byrokratickou překážkou, nýbrž příležitostí zapojit se do veřejného dění a kultivace svého okolí. </p>
+      <h1>Otevřeme hospodaření kraje</h1>
+      <h3>Zprůhledníme financování</h3>
+    </section>
+  </div>
 </div>
