Menu and program

--- a/index.html
+++ b/index.html
@@ -110,13 +110,76 @@ layout: default
 </section>
 
 <div class="row">
-  <div class="medium-12 columns">
     <section class="o-section o-section--spaceBot">
       <h2 class="o-section__heading">Společný program pro krajské volby 2016</h2>
       <!-- https://www.pirati.cz/volby/2016/program -->
       <p>Naším cílem je kraj nové generace, kde může každý člověk svůj život prožít svobodně a naplno. Klíčem k prosperitě naší společnosti je otevřenost, transparentnost, svoboda informací, kvalitní veřejné služby, použití nových technologií a zapojení občanů do rozhodování. Piráti nabízí alternativu kraje bez korupce, nesmyslných dotací, politických trafik a klientelismu. Chceme, aby krajské úřady nebyly pro aktivní občany byrokratickou překážkou, nýbrž příležitostí zapojit se do veřejného dění a kultivace svého okolí. </p>
+      <div class="medium-12 large-8 columns">
       <h1>Otevřeme hospodaření kraje</h1>
       <h3>Zprůhledníme financování</h3>
+      <h4>Zveřejňujeme vše, co můžeme, ne jen to, co musíme.</h4>
+      <p>Podle <em>Transparency International</em> se až 25 % z veřejných rozpočtů vynakládá neúčelně, na nadbytečné výdaje a korupci. Zveřejňování smluv nyní již upravuje zákon o registru smluv, my ovšem chceme zveřejňovat smlouvy i nad rámec povinností dle tohoto zákona, tedy i ty s hodnotou nižší než 50 000 Kč. Zároveň hodláme zveřejňovat i faktury, které vypovídají o reálných částkách vyplacených na základě smluvních vztahů.</p>
+      <h4>Zavedeme transparentní účetnictví kraje.</h4>
+      <p>Občané dnes nemají šanci zjistit, kolik peněz bylo komu a za co zaplaceno. Chceme, aby kraj přešel k využívání otevřeného účetnictví všude tam, kde to zákon dovoluje. Všichni tak budou moci kontrolovat, za co konkrétně se finanční prostředky kraje utrácejí. Pro společnosti, ve kterých je většinovým vlastníkem kraj, musí platit stejné povinnosti otevřeného hospodaření jako pro kraj samotný.</p>
+      <h4>Všechny veřejné zakázky budou skutečně veřejné.</h4>
+      <p>Celou zadávací dokumentaci zveřejníme dostatečně dlouhou dobu předem na Internetu. Stejným způsobem budou průběžně zveřejňovány i další informace o veřejné zakázce. O výběrovém řízení se tak dozví mnohem více dodavatelů a nestane se, že se do záměrně utajovaného řízení přihlásí jen firma, které dal příslušný úředník vědět.</p>
+      <h4> Rozšíříme informace zveřejňované o dotacích.</h4>
+      <p>U poskytnutých dotací budeme zveřejňovat i jejich vyúčtování, aby každý viděl, kam veřejné prostředky nakonec doputovaly.</p>
+      <h4>Podpoříme internetové aukce a další moderní nástroje pro veřejné zakázky.</h4>
+      <p>Výběrová řízení na služby, které nabízí velký počet poskytovatelů, by měla probíhat formou internetové aukce. Kraj stanoví nejvyšší cenu, kterou je ochoten zaplatit, a způsob zohlednění kvality služeb v aukci. Nabídky dodavatelů budou okamžitě oceněny a zveřejněny. Dojde k urychlení výběrových řízení a každý občan bude mít přehled, kdo a za kolik měl o zakázku zájem. Dohodám firem mimo aukční systém nelze předejít, ale motivační faktor ke skutečné soutěži tuto nevýhodu vyvažuje. Najdeme vhodný, legislatvně možný, mix kritérií regionality, referencí a předchozí zkušenosti s dodavatelem takový, abychom zabránili například účelovému vzniku firem pro jedinou vypsanou zakázku.</p>
+    </div>
+    <div class="medium-12 large-4 columns">
+      <aside class="o-section">
+        <div class="o-section-inner o-section-inner--rightBlock">
+          <div class="o-section-block--spaceBot show-for-large">
+            <ul class="c-widget-accordion" data-accordion="" data-allow-all-closed="true">
+              <li class="c-widget-accordion-item is-active" data-accordion-item="">
+                <a href="#" class="c-widget-accordion-link">
+                  <span class="c-widget-accordion__title">Obsah</span>
+                  <span class="c-widget-accordion__icon c-widget-accordion__icon" aria-hidden="true">
+                    <i class="fa fa-list"></i>
+                  </span>
+                </a>
+                <div class="c-widget-accordion-content" data-tab-content="">
+                  <div class="c-widget-accordion-content-inner">
+                    <h4 class="c-widget-accordion-list__heading">Společný program pro<br>krajské volby 2016</h4>
+                    <ul class="c-widget-accordion-list">
+                      <li>
+                        <a href="#">Otevřeme hospodaření kraje</a>
+                        <ul>
+                          <li>
+                            <a href="#">Zprůhledníme financování</a>
+                          </li>
+                          <li>
+                            <a href="#">Budeme hospodařit efektivně</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Víme, jak řídit kraj zodpovědně</a>
+                      </li>
+                      <li>
+                        <a href="#">Zapojíme občany do rozhodování</a>
+                        <ul>
+                          <li>
+                            <a href="#">Jednáme s lidmi otevřeně</a>
+                          </li>
+                          <li>
+                            <a href="#">Usnadníme přístup k informacím</a>
+                          </li>
+                          <li>
+                            <a href="#">Vyjdeme vstříc aktivním občanům</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
     </section>
-  </div>
 </div>
