--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ layout: default
 
 <section class="o-section o-section--spaceBot">
   {% assign leaders = site.data.region-leaders %}
+  {% include modals.html param='leaders' %}
     <div class="row">
         <div class="medium-12 columns">
             <h2 class="o-section__heading">Piráti představují krajské lídry</h2>
@@ -38,7 +39,7 @@ layout: default
                 Změnou či regionálními hnutími. Mezi kandidáty na post hejtmana se vyskytují například průkopník internetového podnikání v Česku Jiří Hlavenka nebo bývalý předseda Pirátů Lukáš Černohorský. Pro všechny představuje stěžejní téma otevřenost
                 a transparence, které ve spoustě krajích v praxi stále doposud nefungují a vedou k vysoké zadluženosti krajů, druhé klíčové téma Pirátů pro krajské volby je modernizace státní správy. Společný program pro krajské volby 2016 jsme představili
                 v červnu.</p>
-            <p style="font-weight: 550">{% for leader in leaders %}<a href="">{{ leader.region}}</a> / {% endfor %}</p>
+            <p style="font-weight: 550">{% for leader in leaders %}<a data-open="{{leader.id}}">{{ leader.region}}</a> / {% endfor %}</p>
         </div>
     </div>
 
@@ -64,6 +65,7 @@ layout: default
 
 <section class="o-section o-section--spaceBot">
   {% assign leaders = site.data.senate-candidates %}
+  {% include modals.html param='leaders' %}
   <div class="row">
       <div class="medium-12 columns">
           <section class="o-section o-section--spaceBot">
@@ -72,7 +74,7 @@ layout: default
               <p>Vedle krajských voleb se v třetině volebních obvodů konají i volby senátní, jejichž první kolo proběhne 7. a 8. října, druhé kolo následující víkend 15. a 16. října. Do voleb jde s podporou Pirátů osm různých kandidátů napříč republikou.
                   Lukáš Černohorský, bývalý předseda Pirátů, navíc podal kandidaturu s cílem zpochybnit věkovou hranici pro senátní volby. Mezi kandidáty s podporou Pirátů najdeme aktivistku zaměřenou na zapojování veřejnosti do rozhodování, vedoucího
                   Českého horologického spolku, který propojuje svoji vášeň pro informatiku se zájmem o staré hodiny, nebo zakladatele sdružení Podnikáme bez korupce.</p>
-            <p style="font-weight: 550">{% for leader in leaders %}<a href="">{{ leader.region}}</a> / {% endfor %}</p>
+            <p style="font-weight: 550">{% for leader in leaders %}<a data-open="{{leader.id}}">{{ leader.region}}</a> / {% endfor %}</p>
           </section>
       </div>
   </div>
