--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <div class="row">
-    <img src="{{'banner_desktop.jpg' | prepend: 'assets/img/' | prepend: site.baseurl }}">
+    <img class="hide-for-small-only" src="{{'banner_desktop.jpg' | prepend: 'assets/img/' | prepend: site.baseurl }}">
+    <img class="show-for-small-only" src="{{'banner_mobile.jpg' | prepend: 'assets/img/' | prepend: site.baseurl }}">
 </div>
 <section>
     <div class="row" style="background-color: lightgray;">
