--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ layout: default
   <div class="row">
       <div class="medium-12 columns">
           <section class="o-section o-section--spaceBot">
-              <h2 class="o-section__heading">Piráti představují kandidáty do senátu</h2>
+              <h2 class="o-section__heading">Piráti představují kandidáty do Senátu</h2>
               <!-- https://www.pirati.cz/tiskove-zpravy/pirati_predstavuji_kandidaty_do_senatu -->
               <p>Vedle krajských voleb se v třetině volebních obvodů konají i volby senátní, jejichž první kolo proběhne 7. a 8. října, druhé kolo následující víkend 15. a 16. října. Do voleb jde s podporou Pirátů osm různých kandidátů napříč republikou.
                   Lukáš Černohorský, bývalý předseda Pirátů, navíc podal kandidaturu s cílem zpochybnit věkovou hranici pro senátní volby. Mezi kandidáty s podporou Pirátů najdeme aktivistku zaměřenou na zapojování veřejnosti do rozhodování, vedoucího
