--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="row">
-    <img class="hide-for-small-only" src="{{'banner_post_election.jpg' | prepend: 'assets/img/' | prepend: site.baseurl }}">
+    <img class="hide-for-small-only" src="/assets/img/banner_post_election.jpg">
 </div>
 <section>
     <div class="row" style="background-color: lightgray;">
